syntax = "proto3";

package ai.lzy.v1.disk;

import "ai/lzy/v1/disk/disk.proto";

option java_outer_classname = "LDS";
option java_package = "ai.lzy.v1.disk";

service LzyDiskService {
  rpc CreateDisk (CreateDiskRequest) returns (CreateDiskResponse);
  rpc GetDisk (GetDiskRequest) returns (GetDiskResponse);
  rpc DeleteDisk (DeleteDiskRequest) returns (DeleteDiskResponse);
  rpc ListUserDisks (ListUserDisksRequest) returns (ListUserDisksResponse);
}

message CreateDiskRequest {
  string user_id = 1;
  string label = 2;
  DiskType type = 3;
  int32 size_gb = 4;
}

message CreateDiskResponse {
  Disk disk = 1;
}

message GetDiskRequest {
  string user_id = 1;
  string disk_id = 2;
}

message GetDiskResponse {
  Disk Disk = 1;
}

message DeleteDiskRequest {
  string user_id = 1;
  string disk_id = 2;
}

message DeleteDiskResponse {
  Disk disk = 1;
}

message ListUserDisksRequest {
  string user_id = 1;
}

message ListUserDisksResponse {
  repeated Disk Disk = 1;
}
