syntax = "proto3";

package ai.lzy.priv.v1;

option java_outer_classname = "LED";
option java_package = "ai.lzy.priv.v1";

message Disk {
  string disk_id = 1;
  DiskType type = 2;
}

enum DiskType {
  UNSPECIFIED = 0;
  LOCAL_DIR = 1;
  S3_STORAGE = 2;
  //COMPUTE_DISK = 3;
  //K8S_VOLUME = 4;
}
